edit: create section-about

--- a/index.html
+++ b/index.html
@@ -116,12 +116,91 @@
 	</section>
 	<!-- /.video -->
 
-	<section class="about">
+	<section class="services">
 		<div class="container">
-			<div class="about-wrapper">
-				
+			<div class="services-wrapper">
+				<h2 class="services-title">Что мы делаем?</h2>
+				<div class="services-content">
+					<div class="services-item">
+						<div class="services-item__info">
+							<div class="services-item__bg">
+								<img src="img/services-selection.jpg" alt="image: selection">
+							</div>
+							<div class="services-item__hidden-text">
+								<p>Не следует, однако забывать, что консультация с широким активом представляет собой интересный эксперимент проверки
+								модели развития. Равным образом новая модель организационной деятельности в значительной степени обуславливает создание
+								форм развития.</p>
+							</div>
+							<!-- /.services-item__hidden-text -->
+							<div class="services-item__name">								
+								<div class="services-item__icon">
+									<img src="img/services-puzzle.svg" alt="icon: puzzle">
+								</div>
+								<!-- /.services-item__icon -->
+								<h4 class="services-item__title">Мотоподбор</h4>
+							</div>
+							<!-- /.services-item__name -->
+						</div>
+						<!-- /.services-item__info -->
+						<a href="#" class="services-item__button">Заказать</a>
+					</div>
+					<!-- /.services-item -->
+
+
+					<div class="services-item">
+						<div class="services-item__info">
+							<div class="services-item__bg">
+								<img src="img/services-motoservice.jpg" alt="image: motoservice">
+							</div>
+							<div class="services-item__hidden-text">
+								<p>Не следует, однако забывать, что консультация с широким активом представляет собой интересный эксперимент проверки
+								модели развития. Равным образом новая модель организационной деятельности в значительной степени обуславливает создание
+								форм развития.</p>
+							</div>
+							<!-- /.services-item__hidden-text -->
+							<div class="services-item__name">								
+								<div class="services-item__icon">
+									<img src="img/services-repair.svg" alt="icon: repair">
+								</div>
+								<!-- /.services-item__icon -->
+								<h4 class="services-item__title">Мотоподбор</h4>
+							</div>
+							<!-- /.services-item__name -->
+						</div>
+						<!-- /.services-item__info -->
+						<a href="#" class="services-item__button">Заказать</a>
+					</div>
+					<!-- /.services-item -->
+
+					
+					<div class="services-item">
+						<div class="services-item__info">
+							<div class="services-item__bg">
+								<img src="img/services-evacuation.jpg" alt="image: evacuation">
+							</div>
+							<div class="services-item__hidden-text">
+								<p>Не следует, однако забывать, что консультация с широким активом представляет собой интересный эксперимент проверки
+								модели развития. Равным образом новая модель организационной деятельности в значительной степени обуславливает создание
+								форм развития.</p>
+							</div>
+							<!-- /.services-item__hidden-text -->
+							<div class="services-item__name">								
+								<div class="services-item__icon">
+									<img src="img/services-repair.svg" alt="icon: repair">
+								</div>
+								<!-- /.services-item__icon -->
+								<h4 class="services-item__title">Мотоподбор</h4>
+							</div>
+							<!-- /.services-item__name -->
+						</div>
+						<!-- /.services-item__info -->
+						<a href="#" class="services-item__button">Заказать</a>
+					</div>
+					<!-- /.services-item -->
+				</div>
+				<!-- /.services-content -->
 			</div>
-			<!-- /.about-wrapper -->
+			<!-- /.services-wrapper -->
 		</div>
 		<!-- /.container -->
 	</section>
