--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 				<div class="price-list">
 					<div class="price-item">
 							<h4 class="price-name">Мотосервис</h4>
-							<div class="price-table">
+							<div class="price-item__table">
 								<div>Услуга</div>
 								<div>Цена</div>
 							</div>
@@ -243,7 +243,7 @@
 
 					<div class="price-item">
 							<h4 class="price-name">Мотоподбор</h4>
-							<div class="price-table">
+							<div class="price-item__table">
 								<div>Услуга</div>
 								<div>Цена</div>
 							</div>
@@ -257,7 +257,7 @@
 
 					<div class="price-item">
 							<h4 class="price-name">Мотоэвакуция</h4>
-							<div class="price-table">
+							<div class="price-item__table">
 								<div>Услуга</div>
 								<div>Цена</div>
 							</div>
