edit: change grid for serices, js for price

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 			<div class="video-wrapper">
 				<div class="video-block">
 					<a href="#" data-fancybox>
-						<img src="img/video-block__play.png" alt="icon: play-video">
+						<span><img src="img/video-block__play.png" alt="icon: play-video"></span>
 					</a>			
 				</div>
 				<!-- /.video-block -->	
@@ -124,7 +124,7 @@
 					<div class="services-item">
 						<div class="services-item__info">
 							<picture>
-								<source src="img/services-selection.webp" class="services-item__bg" type="image/webp" loading="lazy">
+								<source src="img/services-selection.webp" class="services-item__bg" type="image/webp">
 								<img src="img/services-selection.jpg" class="services-item__bg" loading="lazy" alt="image: selection">
 							</picture>
 							<div class="services-item__hidden-text">
@@ -152,7 +152,7 @@
 					<div class="services-item">
 						<div class="services-item__info">
 							<picture>
-								<source src="img/services-motoservice.webp" class="services-item__bg" type="image/webp" loading="lazy">
+								<source src="img/services-motoservice.webp" class="services-item__bg" type="image/webp">
 								<img src="img/services-motoservice.jpg" class="services-item__bg" loading="lazy" alt="image: motoservice">
 							</picture>
 							<div class="services-item__hidden-text">
@@ -179,7 +179,7 @@
 					<div class="services-item">
 						<div class="services-item__info">
 							<picture>
-								<source src="img/services-evacuation.webp" class="services-item__bg" type="image/webp" loading="lazy">
+								<source src="img/services-evacuation.webp" class="services-item__bg" type="image/webp">
 								<img src="img/services-evacuation.jpg" class="services-item__bg" loading="lazy" alt="image: evacuation">
 							</picture>
 							
@@ -202,6 +202,7 @@
 						<a href="#" class="services-item__button">Заказать</a>
 					</div>
 					<!-- /.services-item -->
+					
 				</div>
 				<!-- /.services-content -->
 			</div>
@@ -213,7 +214,7 @@
 	<section class="price">
 		<!-- <div class="price-bg"> -->
 			<!-- <picture>
-				<source src="img/price-bg.webp" class="price-bg" type="image/webp" loading="lazy">
+				<source src="img/price-bg.webp" class="price-bg" type="image/webp">
 				<img src="img/price-bg.jpg" class="price-bg" alt="image: price-background" loading="lazy">
 			</picture>			 -->
 		<!-- </div> -->
