edit: change js for price-items

--- a/index.html
+++ b/index.html
@@ -225,48 +225,58 @@
 				<div class="price-list">
 					<div class="price-item">
 							<h4 class="price-name">Мотосервис</h4>
-							<div class="price-item__table">
-								<div>Услуга</div>
-								<div>Цена</div>
+							<div class="price-item__wrapper">
+								
+								<div class="price-item__table">
+									<div>Услуга</div>
+									<div>Цена</div>
+								</div>
+								<ul>
+									<li><div>Обслуживание вилки (замена масла масла, сальнико, направляющих, пыльников)</div> <div>от 4500₽</div> </li>
+									<li><div>Замена приводной цепи с звездами</div> <div>от 4500₽</div> </li>
+									<li><div>Шиномонтаж с балансировкой</div> <div>от 600₽</div> </li>
+									<li><div>Замена масла моторного с фильтром</div> <div>от 900₽</div> </li>
+									<li><div>Обслуживание приводной цепи (чистка, смазка, подтяжка)</div> <div>от 1100₽</div> </li>
+									<li><div>Замена тормозной жидкости вакуумным методом</div> <div>400₽</div> </li>
+									<li><div>Замена подшипников рулевой колонки</div> <div>от 3500₽</div> </li>
+								</ul>
+
 							</div>
-							<ul>
-								<li><div>Обслуживание вилки (замена масла масла, сальнико, направляющих, пыльников)</div> <div>от 4500₽</div> </li>
-								<li><div>Замена приводной цепи с звездами</div> <div>от 4500₽</div> </li>
-								<li><div>Шиномонтаж с балансировкой</div> <div>от 600₽</div> </li>
-								<li><div>Замена масла моторного с фильтром</div> <div>от 900₽</div> </li>
-								<li><div>Обслуживание приводной цепи (чистка, смазка, подтяжка)</div> <div>от 1100₽</div> </li>
-								<li><div>Замена тормозной жидкости вакуумным методом</div> <div>400₽</div> </li>
-								<li><div>Замена подшипников рулевой колонки</div> <div>от 3500₽</div> </li>
-							</ul>
+							<!-- /.price-item__wrapper -->
 					</div>
 					<!-- /.price-item -->
 
 
 					<div class="price-item">
 							<h4 class="price-name">Мотоподбор</h4>
-							<div class="price-item__table">
-								<div>Услуга</div>
-								<div>Цена</div>
+							<div class="price-item__wrapper">							
+								<div class="price-item__table">
+									<div>Услуга</div>
+									<div>Цена</div>
+								</div>
+								<ul>
+									<li><div>Осмотр мотоцикла в черте метро Спб</div> <div>3500₽</div> </li>
+									<li><div>Осмотр мотоцикла в ЛО (+ 50 ₽ за 1 км пути от последней станции метро)</div> <div>2500₽</div> </li>
+								</ul>
 							</div>
-							<ul>
-								<li><div>Осмотр мотоцикла в черте метро Спб</div> <div>3500₽</div> </li>
-								<li><div>Осмотр мотоцикла в ЛО (+ 50 ₽ за 1 км пути от последней станции метро)</div> <div>2500₽</div> </li>
-							</ul>
+							<!-- /.price-item__wrapper -->
 					</div>
 					<!-- /.price-item -->
 
 
 					<div class="price-item">
 							<h4 class="price-name">Мотоэвакуция</h4>
-							<div class="price-item__table">
-								<div>Услуга</div>
-								<div>Цена</div>
-							</div>
-							<ul>
-								<li><div>Перевозка мототехники в черте города</div> <div>от 1500₽</div> </li>
-								<li><div>Перевозка мотоцикла за пределы города</div> <div>2500₽</div> </li>
-
-							</ul>
+							<div class="price-item__wrapper">
+								<div class="price-item__table">
+									<div>Услуга</div>
+									<div>Цена</div>
+								</div>
+								<ul>
+									<li><div>Перевозка мототехники в черте города</div> <div>от 1500₽</div> </li>
+									<li><div>Перевозка мотоцикла за пределы города</div> <div>2500₽</div> </li>
+								</ul>							
+						</div>
+							<!-- /.price-item__wrapper -->
 					</div>
 					<!-- /.price-item -->
 				
@@ -279,6 +289,20 @@
 		<!-- /.container -->
 	</section>
 
+
+	<section class="clients">
+		<div class="container">
+			<div class="clients-wrapper">
+				<div class="clients-info">
+					<h2 class="clients-title">Сотни довольных <br> клиентов</h2>
+					<h4 class="clients-subtitle">У каждого своя история!</h4>
+				</div>
+				<!-- /.clients-info -->
+			</div>
+			<!-- /.clients-wrapper -->
+		</div>
+		<!-- /.container -->
+	</section>
 
 	<script src="libs/jquery.min.js"></script>
 	<script src="libs/fancybox/fancybox.js"></script>
