edit: footer-nav issue

--- a/index.html
+++ b/index.html
@@ -487,8 +487,8 @@
 					<div class="footer-nav">
 						<ul>
 							<li><a href="#" data-goto=".services-item__info">Услуги и цены</a></li>
-							<li><a href="#">Отзывы</a></li>
-							<li><a href="#">Контакты</a></li>
+							<li><a href="#" data-goto=".clients">Отзывы</a></li>
+							<li><a href="#" data-goto=".map">Контакты</a></li>
 						</ul>
 					</div>
 					<!-- /.footer-nav -->
